--- a/resources.qmd
+++ b/resources.qmd
@@ -97,3 +97,44 @@ Two good ways to keep up with what is going on with R and the R community is to 
 - The [Quarto documentation](https://quarto.org/docs/guide/) is very good and thorough.
 - Look through the [Getting started tutorial](https://quarto.org/docs/get-started/hello/rstudio.html) to get acquainted with the basics of a quarto document.
 - For an extensive list of resources on Quarto see [Awesome Quarto](https://github.com/mcanouil/awesome-quarto).
+
+### Quarto websites
+- [Quarto websites](https://quarto.org/docs/websites/) are a collection of Quarto documents using `format: html` with a set structure and consistent visual style.
+- Create new Quarto website project: File -> New Project... -> Quarto Website.
+
+There are multiple ways to preview the website.
+
+- RStudio interface: `Render` button (⇧⌘K). Use gear button to control how preview works.
+- `quarto` commands on the R console: `quarto::quarto_preview()`
+- Quarto command line interface in Terminal: `quarto preview`
+
+You can render the website, meaning build all of the pages into the `_site` folder, through the same methods.
+
+- RStudio interface: `build` tab in upper-right section of RStudio -> `Render Website`
+- `quarto` commands on the R console: `quarto::quarto_render()`
+- Quarto command line interface in Terminal: `quarto render`
+
+### Publishing Quarto websites with GitHub Pages {#sec-quarto-publish}
+- See documentation for publishing website with [GitHub pages](https://quarto.org/docs/publishing/github-pages.html#publish-command).
+- We will use the [publish command](https://quarto.org/docs/publishing/github-pages.html#publish-command) using the quarto command line interface.
+
+### Setting up the publish command
+1. First, **make sure all changes are committed** on your project.
+2. Create an empty `gh-pages` branch.
+    1. `git checkout --orphan gh-pages`
+    2. `git reset --hard`
+    3. `git commit --allow-empty -m "Initialising gh-pages branch"`
+    4. `git push origin gh-pages`
+3. Check Settings -> Pages for **Source** branch on your [GitHub](https://github.com) repository.
+4. Ignore `_site/` folder in git
+    1. Add `/_site/` to `.gitignore` file.
+    2. Remove any tracking of `_site/` in git: `git rm -r _site`
+5. Publish through command line: `quarto publish gh-pages`
+
+What this does: The publish command will render your content, copy the output to a special `gh-pages` branch, push that branch to GitHub, and then open a browser to view your site once it is deployed.
+
+### What you should be doing to make changes to your website
+1. Make the changes in RStudio.
+2. `git add` and `git commit -m` changes.
+3. Push changes to GitHub main branch: `git push origin main`
+4. Publish changes by pushing to gh-pages branch: `quarto publish gh-pages`
