--- a/meetings/10-quarto.qmd
+++ b/meetings/10-quarto.qmd
@@ -39,18 +39,7 @@ title: "Week 10: Making documents and websites with Quarto"
     - Section identifier: `# Introduction {#sec-introduction}` and `[about](about.qmd#sec-introduction)`.
   - [Footer](https://quarto.org/docs/websites/website-navigation.html#page-footer): Add a footer to have text at the bottom of each page with `page-footer` in `_quarto.yml`.
 - [About page](https://quarto.org/docs/websites/website-about.html): Add an About page with special formatting.
-- Aesthetics
-	- [Themes](https://quarto.org/docs/output-formats/html-themes.html)
-    - Quarto HTML documents are all based on [Bootstrap 5](https://getbootstrap.com/).
-	  - Quarto provides access to 25 [Bootswatch themes](https://bootswatch.com/).
-	  - Change theme in `_quarto.yml` under `format:`
-	- YAML options in `_quarto.yml`
-	  - Can make [basic customization](https://quarto.org/docs/output-formats/html-themes.html#basic-options) to the theme in YAML options under `format:`
-	- SCSS
-	  - Create [fully custom themes](https://quarto.org/docs/output-formats/html-themes.html#custom-themes) with [SASS](https://sass-lang.com) variables through `scss` files, which is a superset of [CSS (Cascading Style Sheets)](https://developer.mozilla.org/en-US/docs/Web/CSS).
-	  - `custom.scss`
-	  - See [Quarto SASS variables](https://quarto.org/docs/output-formats/html-themes.html#sass-variables) for the most likely variables you might want to change.
-	  - See [More About Quarto Themes](https://quarto.org/docs/output-formats/html-themes-more.html) on using Scss.
+- Aesthetics: [Themes](https://quarto.org/docs/output-formats/html-themes.html)
 - [Website tools](https://quarto.org/docs/websites/website-tools.html): Header, footer, and integration with other services.
 - [Website search](https://quarto.org/docs/websites/website-search.html): Options for having a search field for website.
 
