Add plain text guide

--- a/faq.qmd
+++ b/faq.qmd
@@ -18,7 +18,7 @@ Writing in plain text may seem odd at first, and it confronts the beginner with 
 - **Light weight**: Plain text documents are incredibly lightweight. Word processors add all sorts of formatting characters to provide a WYSIWYG experience that increase the file size and add complexity to the whole process of writing. Try opening a hundred page document in Word and then try opening the same document in a plain text editor. The latter will open instantaneously.
 - **The power of a text editor**: With a text editor application you can perform all sorts of complex search and search and replace functionality across multiple documents at the same time.
 - **The web**: The internet is created using plain text documents. If you want to write for the web, you should be writing in plain text.
-- **Adding formatting with markup languages**: If the lack of formatting is a benefit, how do you get plain text documents to have the formatting you want in a document? The answer is to use a markup language. The markup language of the web is HTML, but other common markup languages used to write for academic purposes are [Markdown](faq.qmd#sec-markdown) and [latex](https://www.latex-project.org). With these markup languages you can create complex documents that serve the needs of academics well.
+- **Adding formatting with markup languages**: If the lack of formatting is a benefit, how do you get plain text documents to have the formatting you want in a document? The answer is to use a markup language. The markup language of the web is HTML, but other common markup languages used to write for academic purposes are [Markdown](faq.qmd#sec-markdown), [typst](https://typst.app), and [latex](https://www.latex-project.org). With these markup languages you can create complex documents that serve the needs of academics well.
 
 ## Why should I learn markdown? {#sec-markdown}
 - The Markdown syntax is easy to learn and is designed to be human readable, meaning the syntax does not distract from the text itself.
