--- a/meetings/04-markdown.qmd
+++ b/meetings/04-markdown.qmd
@@ -31,6 +31,7 @@ See [Resources: Text editors](/resources.qmd#sec-text-editors). A good text edit
 
 ### Markdown
 - [John Gruber's introduction of Markdown and its syntax](https://daringfireball.net/projects/markdown/syntax)
+- [Programming Historian: Getting Started with Markdown](https://programminghistorian.org/en/lessons/getting-started-with-markdown)
 - [Markdown style guide: Quarto docs](https://quarto.org/docs/authoring/markdown-basics.html)
 - [Markdown Style Guide](https://markdownguide.offshoot.io/basic-syntax/)
 - Many Markdown editors, especially those that focus on academic writing, depend upon [Pandoc](https://pandoc.org), which attempts to be a universal document converter.
