--- a/guides/plaintext.qmd
+++ b/guides/plaintext.qmd
@@ -9,7 +9,7 @@ Writing in plain text may seem odd at first, and it confronts the beginner with 
 - **Light weight**: Plain text documents are incredibly lightweight. Word processors add all sorts of formatting characters to provide a WYSIWYG experience that increase the file size and add complexity to the whole process of writing. Try opening a hundred page document in Word and then try opening the same document in a plain text editor. The latter will open instantaneously.
 - **The power of a text editor**: With a text editor application you can perform all sorts of complex search and search and replace functionality across multiple documents at the same time.
 - **The web**: The internet is created using plain text documents. If you want to write for the web, you should be writing in plain text.
-- **Adding formatting with markup languages**: If the lack of formatting is a benefit, how do you get plain text documents to have the formatting you want in a document? The answer is to use a markup language. The markup language of the web is HTML, but most modern plaintext applications use [Markdown](https://daringfireball.net/projects/markdown/basics) to add formatting such as headings, lists, links, and even footnotes.
+- **Adding formatting with markup languages**: If the lack of formatting is a benefit, how do you get plain text documents to have the formatting you want in a document? The answer is to use a markup language. The markup language of the web is HTML, but most modern plain text applications use [Markdown](https://daringfireball.net/projects/markdown/basics) to add formatting such as headings, lists, links, and even footnotes. See the [Guide on Markdown Syntax](/guides/markdown-syntax.qmd).
 
 ## What do I need to write in plaintext?
 In short, a good text editor. Below are some good options to start with.
