--- a/index.qmd
+++ b/index.qmd
@@ -59,7 +59,7 @@ As noted above, the primary expectation for the course is a willingness to try, 
 ## How the course works
 Meetings will be divided between discussion of weekly readings and topics and interactive workshops devoted to the tools and technologies for that week. All information necessary for the course is made available through this website. Information about weekly reading, assignments, and resources is available via the Schedule on the sidebar. This information is dynamic and liable to change, so please make sure to visit this website frequently.
 
-We will be using two pieces of technology to help with collaboration during the semester. We will use [Discord](https://discord.com) to provide a place to ask questions and receive feedback outside of the meetings. The Discord will also be a place for any announcements about the course. See [Resources: Discord](resources.qmd#sec-discord) for instructions on getting set up with Discord. Secondly, we will be using [Zotero groups](https://www.zotero.org/groups/) as a way to collaboratively keep track of the resources we use for the class. See [Resources: Zoetero](resources.qmd#sec-zotero) for instructions on getting set up with Zotero.
+We will be using two pieces of technology to help with collaboration during the semester. We will use [Discord](https://discord.com) to provide a place to ask questions and receive feedback outside of the meetings. The Discord will also be a place for any announcements about the course. See [Resources: Discord](resources.qmd#sec-discord) for instructions on getting set up with Discord. Secondly, we will be using [Zotero groups](https://www.zotero.org/groups/) as a way to collaboratively keep track of the resources we use for the class. See [Resources: Zotero](resources.qmd#sec-zotero) for instructions on getting set up with Zotero.
 
 ::: {.callout-tip icon=false}
 ## Note
